fix_z-index-btn

--- a/css/about.css
+++ b/css/about.css
@@ -147,6 +147,8 @@ p{
 }
 
 .section-3-3 .btn-black{
+  position: relative;
+  z-index: 99999;
   width: 50%;
   height: 50px;
   margin-top: 50px;
@@ -175,6 +177,8 @@ p{
 
 /*____________________________________________---4↓---_____________________________________*/
 .section-4-3{
+  position: relative;
+  z-index: 99999;
   display: grid;
   justify-content: center;
   margin-top: 200px;
@@ -224,6 +228,8 @@ p{
 }
 
 .feedback-slide {
+  position: relative;
+  z-index: 99999;
   display: none;
   height: 100%;
   position: absolute;
